<resources>
    <string name="app_name">MyProject</string>
    <string name="expenditure">訂單金額</string>
    <string name="date">日期</string>
    <string name="memo">備註</string>
    <string name="activity_name">活動名稱</string>
    <string name="activity_start">活動開始日期</string>
    <string name="activity_end">活動結束日期</string>
    <string name="ratio">回饋倍數</string>
    <string name="feedback_start">回饋開始日期</string>
    <string name="feedback_end">回饋結束日期</string>
    <string name="plz_date">請輸入日期</string>
    <string name="act_list">活動列表</string>
</resources>
