<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="28dp" />

            <EditText
                android:id="@+id/act_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                tools:layout_editor_absoluteX="97dp"
                tools:layout_editor_absoluteY="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="回饋上限"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/limted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_start"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/act_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="起"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="111dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="~"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="150dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/act_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="迄"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback_start"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/feedback_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="起"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="~"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/feedback_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="迄"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ratio"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="25dp" />

            <EditText
                android:id="@+id/ratio"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="9dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/memo"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="30dp" />

            <EditText
                android:id="@+id/memo"
                android:layout_width="212dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                tools:layout_editor_absoluteX="122dp"
                tools:layout_editor_absoluteY="5dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>